--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                             <p class="text--name">Vanilla</p>
                             <p class="text--price">30₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_01')"></i>
+                                <input id="add_01" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_01')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -224,9 +224,9 @@
                             <p class="text--name">Three Rose</p>
                             <p class="text--price">40₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_02')"></i>
+                                <input id="add_02" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_02')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -250,9 +250,9 @@
                             <p class="text--name">Aromatic Blend</p>
                             <p class="text--price">30₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_03')" ></i>
+                                <input id="add_03" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_03')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -276,9 +276,9 @@
                             <p class="text--name">Coco & Sandalwood</p>
                             <p class="text--price">40₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_04')" ></i>
+                                <input id="add_04" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_04')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -302,9 +302,9 @@
                             <p class="text--name">Orange & Bergamot</p>
                             <p class="text--price">40₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_05')" ></i>
+                                <input id="add_05" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_05')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -328,9 +328,9 @@
                             <p class="text--name">Lavender</p>
                             <p class="text--price">30₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_06')" ></i>
+                                <input id="add_06" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_06')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -354,9 +354,9 @@
                             <p class="text--name">Organic Beeswax</p>
                             <p class="text--price">30₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_07')" ></i>
+                                <input id="add_07" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_07')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -380,9 +380,9 @@
                             <p class="text--name">Soy</p>
                             <p class="text--price">30₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_08')" ></i>
+                                <input id="add_08" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_08')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -406,9 +406,9 @@
                             <p class="text--name">Star Anise & Lily</p>
                             <p class="text--price">40₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_09')" ></i>
+                                <input id="add_09" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_09')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -432,9 +432,9 @@
                             <p class="text--name">Lemon Coco</p>
                             <p class="text--price">15₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_10')" ></i>
+                                <input id="add_10" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_10')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -458,9 +458,9 @@
                             <p class="text--name">Rose Water</p>
                             <p class="text--price">15₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_11')" ></i>
+                                <input id="add_11" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_11')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -484,9 +484,9 @@
                             <p class="text--name">Honey</p>
                             <p class="text--price">15₫</p>
                             <div class="box_add--sp">
-                                <i class="item item_minus fas fa-minus"></i>
-                                <input class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
-                                <i class="item item_pluss  fas fa-plus"></i>
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_12')" ></i>
+                                <input id="add_12" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_12')"></i>
                             </div>
                             <button class="btn_addSp">ADD TO CART</button>
                         </div>
@@ -570,6 +570,62 @@
 
         </div>
     </footer>
+
+    <!-- box message -->
+    <div class="box_main--message">
+        <div class="box_main_chat">
+            <div class="box_header">
+                <div class="item_name">
+                    <h2>FRAIS</h2>
+                    <ul class="list_active">
+                        <li class="dot">
+                            <i class="fas fa-circle"></i>
+                        </li>
+                        <li class="status">
+                            We’ll reply as soon as we can
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="box_close">
+                    <i class="fas fa-times" style="cursor: pointer;" onclick="closeboxChat()"></i>
+                </div>
+
+            </div>
+            <div class="box_body">
+                <div class="box_chat--text">
+                    <p> lê Thị Khánh Huyền</p>
+                    <p> lê Thị Khánh Huyền</p>
+                    <p> lê Thị Khánh Huyền</p>
+                    <p> lê Thị Khánh Huyền</p>
+                    <p> lê Thị Khánh Huyền</p>
+                    <p> lê Thị Khánh Huyền</p>
+                    <p> lê Thị Khánh Huyền</p>
+                    <p> lê Thị Khánh Huyền</p>
+                </div>
+            </div>
+            <div class="box_footer">
+                <ul class="list_input-send">
+                    <li>
+                        <input type="text"  placeholder="Type your message" class="input_text--chat">
+                    </li>
+                    <li>
+                        <i class="fas fa-paper-plane"></i>
+                    </li>
+                </ul>
+
+                <ul class="list_input-icon">
+                    <li>
+                        <i class="far fa-smile-beam"></i>
+                    </li>
+                    <li>
+                        <i class="fas fa-paperclip"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <button class="btn_chat" onclick="openboxChat()">Let's Chat!</button>
+    </div>
 
     </div>
     
