--- a/shop_all.html
+++ b/shop_all.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>SHOP ALL</title>
 
     <!-- boostrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
     <!-- css -->
     <link rel="stylesheet" href="./access/css/reset.css">
     <link rel="stylesheet" href="./access/css/base.css">
-    <link rel="stylesheet" href="./access/css/page/index.css">
+    <link rel="stylesheet" href="./access/css/page/shop_all.css">
 
 </head>
 
@@ -57,8 +57,8 @@
             <!-- nav -->
             <div class="box_nav">
                 <ul class="box_menu">
-                    <li class="item_menu action_menu"><a href="./index.html">HOME</a></li>
-                    <li class="item_menu"><a href="./shop_all.html">SHOP ALL</a></li>
+                    <li class="item_menu "><a href="./index.html">HOME</a></li>
+                    <li class="item_menu action_menu"><a href="./shop_all.html">SHOP ALL</a></li>
                     <li class="item_menu"><a href="./for_body.html">FOR BODY</a></li>
                     <li class="item_menu"><a href="./about.html">ABOUT</a></li>
                     <li class="item_menu"><a href="./contact.html">CONTACT</a></li>
@@ -177,10 +177,244 @@
     <section class="box_content_main">
         <div class="container_new--edit">
             <div class="box_header--content">
-                <h1>SCENTED CANDLES</h1>
-                <p>Our naturally fragranced candles come in plastic-free, high quality containers</p>
+                <h1>ALL PRODUCTS</h1>
+                <p>Made of natural and organic ingredients</p>
             </div>
             <div class="box_grib--10 box_line">
+
+                <!-- item 13 -->
+                <div class="item_grib--10 item_grib--w3">
+                    <div class="box_content">
+                        <div class="box_main--img">
+                            <img src="./access/image/img_sp/img-13.jpg" alt="">
+                            <a href="#">
+                                <div class="box_view--inf">
+                                    <p class="text--view">Quick view</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="box_text_content">
+                            <p class="text--name">Coconut Milk</p>
+                            <p class="text--price">20₫</p>
+                            <div class="box_add--sp">
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_13')"></i>
+                                <input id="add_13" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_13')"></i>
+                            </div>
+                            <button class="btn_addSp">ADD TO CART</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- item 14 -->
+                <div class="item_grib--10 item_grib--w3">
+                    <div class="box_content">
+                        <div class="box_main--img">
+                            <img src="./access/image/img_sp/img-14.jpg" alt="">
+                            <a href="#">
+                                <div class="box_view--inf">
+                                    <p class="text--view">Quick view</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="box_text_content">
+                            <p class="text--name">Jasmine</p>
+                            <p class="text--price">10₫</p>
+                            <div class="box_add--sp">
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_14')"></i>
+                                <input id="add_14" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_14')"></i>
+                            </div>
+                            <button class="btn_addSp">ADD TO CART</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- item 15 -->
+                <div class="item_grib--10 item_grib--w3">
+                    <div class="box_content">
+                        <div class="box_main--img">
+                            <img src="./access/image/img_sp/img-15.jpg" alt="">
+                            <a href="#">
+                                <div class="box_view--inf">
+                                    <p class="text--view">Quick view</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="box_text_content">
+                            <p class="text--name">Tar</p>
+                            <p class="text--price">10₫</p>
+                            <div class="box_add--sp">
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_15')"></i>
+                                <input id="add_15" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_15')"></i>
+                            </div>
+                            <button class="btn_addSp">ADD TO CART</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- item 16 -->
+                <div class="item_grib--10 item_grib--w3">
+                    <div class="box_content">
+                        <div class="box_main--img">
+                            <img src="./access/image/img_sp/img-16.jpg" alt="">
+                            <a href="#">
+                                <div class="box_view--inf">
+                                    <p class="text--view">Quick view</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="box_text_content">
+                            <p class="text--name">Green Clay</p>
+                            <p class="text--price">20₫</p>
+                            <div class="box_add--sp">
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_16')"></i>
+                                <input id="add_16" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_16')"></i>
+                            </div>
+                            <button class="btn_addSp">ADD TO CART</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- item 17 -->
+                <div class="item_grib--10 item_grib--w3">
+                    <div class="box_content">
+                        <div class="box_main--img">
+                            <img src="./access/image/img_sp/img-17.jpg" alt="">
+                            <a href="#">
+                                <div class="box_view--inf">
+                                    <p class="text--view">Quick view</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="box_text_content">
+                            <p class="text--name">Bitter Almond</p>
+                            <p class="text--price">10₫</p>
+                            <div class="box_add--sp">
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_17')"></i>
+                                <input id="add_17" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_17')"></i>
+                            </div>
+                            <button class="btn_addSp">ADD TO CART</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- item 18 -->
+                <div class="item_grib--10 item_grib--w3">
+                    <div class="box_content">
+                        <div class="box_main--img">
+                            <img src="./access/image/img_sp/img-18.jpg" alt="">
+                            <a href="#">
+                                <div class="box_view--inf">
+                                    <p class="text--view">Quick view</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="box_text_content">
+                            <p class="text--name">Pink Anemone</p>
+                            <p class="text--price">20₫</p>
+                            <div class="box_add--sp">
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_18')"></i>
+                                <input id="add_18" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_18')"></i>
+                            </div>
+                            <button class="btn_addSp">ADD TO CART</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- item 19 -->
+                <div class="item_grib--10 item_grib--w3">
+                    <div class="box_content">
+                        <div class="box_main--img">
+                            <img src="./access/image/img_sp/img-19.jpg" alt="">
+                            <a href="#">
+                                <div class="box_view--inf">
+                                    <p class="text--view">Quick view</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="box_text_content">
+                            <p class="text--name">Honey</p>
+                            <p class="text--price">10₫</p>
+                            <div class="box_add--sp">
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_19')"></i>
+                                <input id="add_19" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_19')"></i>
+                            </div>
+                            <button class="btn_addSp">ADD TO CART</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- item 20 -->
+                <div class="item_grib--10 item_grib--w3">
+                    <div class="box_content">
+                        <div class="box_main--img">
+                            <img src="./access/image/img_sp/img-20.jpg" alt="">
+                            <a href="#">
+                                <div class="box_view--inf">
+                                    <p class="text--view">Quick view</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="box_text_content">
+                            <p class="text--name">Pearl Powder</p>
+                            <p class="text--price">20₫</p>
+                            <div class="box_add--sp">
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_20')"></i>
+                                <input id="add_20" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_20')"></i>
+                            </div>
+                            <button class="btn_addSp">ADD TO CART</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- item 21 -->
+                <div class="item_grib--10 item_grib--w3">
+                    <div class="box_content">
+                        <div class="box_main--img">
+                            <img src="./access/image/img_sp/img-21.jpg" alt="">
+                            <a href="#">
+                                <div class="box_view--inf">
+                                    <p class="text--view">Quick view</p>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="box_text_content">
+                            <p class="text--name">Laurel</p>
+                            <p class="text--price">20₫</p>
+                            <div class="box_add--sp">
+                                <i class="item item_minus fas fa-minus" onclick="minusSL('#add_21')"></i>
+                                <input id="add_21" class="input_add--sp" type="number" max=9999 min= 1 step=1 readonly value="1">
+                                <i class="item item_pluss  fas fa-plus" onclick="plussSL('#add_21')"></i>
+                            </div>
+                            <button class="btn_addSp">ADD TO CART</button>
+                        </div>
+
+                    </div>
+                </div>
 
                 <!-- item 1 -->
                 <div class="item_grib--10 item_grib--w3">
