--- a/index.html
+++ b/index.html
@@ -504,11 +504,11 @@
                 <div class="item_grib--10 item_grib--w4 flex-1">
                     <div class="box_main--content">
                         <h2 class="title_footer">FRAIS</h2>
-                        <a href="#"> <p class="text_footer">HOME</p></a>
-                        <a href="#"> <p class="text_footer">SHOP ALL</p></a>
-                        <a href="#"> <p class="text_footer">FOR BODY</p></a>
-                        <a href="#"> <p class="text_footer">ABOUT</p></a>
-                        <a href="#"> <p class="text_footer">CONTACT</p></a>
+                        <a href="./index.html"> <p class="text_footer">HOME</p></a>
+                        <a href="./shop_all.html"> <p class="text_footer">SHOP ALL</p></a>
+                        <a href="./for_body.html"> <p class="text_footer">FOR BODY</p></a>
+                        <a href="./about.html"> <p class="text_footer">ABOUT</p></a>
+                        <a href="./contact.html"> <p class="text_footer">CONTACT</p></a>
                     </div>
                 </div>
                 <div class="item_grib--10 item_grib--w4 flex-1">
